# src/docs/swagger.json
@@ -12,6 +12,11 @@
         "description": "AWS Development Server"
       },
       {
+        "url": "http://ec2-54-234-18-23.compute-1.amazonaws.com:5000/",
+        "name": "AWS Development Server",
+        "description": "AWS Development Server"
+      },
+      {
         "url": "http://localhost:3000",
         "name": "Local Server",
         "description": "Local Development Server"
@@ -221,23 +226,10 @@
         }
       },
       "/api/services/user-dashboard": {
-        "post": {
+        "get": {
           "summary": "Customer Dashboard",
           "tags": ["Customer"],
           "security": [{ "bearerAuth": [] }],
-          "requestBody": {
-            "content": {
-              "application/x-www-form-urlencoded": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "user_id": { "type": "string" }
-                  },
-                  "required": ["user_id"]
-                }
-              }
-            }
-          },
           "responses": {
             "200": {
               "description": "Success"
@@ -249,6 +241,7 @@
         "post": {
           "summary": "Service Submission",
           "tags": ["Customer"],
+          "security": [{ "bearerAuth": [] }],
           "requestBody": {
             "content": {
               "multipart/form-data": {
@@ -261,8 +254,7 @@
                     "mailId": { "type": "string" },
                     "periodId": { "type": "string" },
                     "message": { "type": "string" },
-                    "files": { "type": "string", "format": "binary" },
-                    "user_id": { "type": "string" }
+                    "files": { "type": "string", "format": "binary" }
                   },
                   "required": ["serviceId", "subServiceId", "mobileNo", "mailId", "periodId", "message", "files", "user_id"]
                 }
@@ -485,23 +477,23 @@
           }
         }
       },
+      "/api/staff/staff-all-dashboard": {
+        "get": {
+          "summary": "Staff All Dashboard",
+          "tags": ["Staff"],
+          "security": [{ "bearerAuth": [] }],
+          "responses": {
+            "200": {
+              "description": "Success"
+            }
+          }
+        }
+      },
       "/api/staff/staff-dashboard": {
-        "post": {
+        "get": {
           "summary": "Staff Dashboard",
           "tags": ["Staff"],
-          "requestBody": {
-            "content": {
-              "application/x-www-form-urlencoded": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "staff_id": { "type": "string" }
-                  },
-                  "required": ["staff_id"]
-                }
-              }
-            }
-          },
+          "security": [{ "bearerAuth": [] }],
           "responses": {
             "200": {
               "description": "Success"
@@ -524,30 +516,6 @@
                     "requestId": { "type": "string" }
                   },
                   "required": ["isApproved", "requestId"]
-                }
-              }
-            }
-          },
-          "responses": {
-            "200": {
-              "description": "Success"
-            }
-          }
-        }
-      },
-      "/api/staff/staff-all-dashboard": {
-        "post": {
-          "summary": "Staff All Dashboard",
-          "tags": ["Staff"],
-          "requestBody": {
-            "content": {
-              "application/x-www-form-urlencoded": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "staff_id": { "type": "string" }
-                  },
-                  "required": ["staff_id"]
                 }
               }
             }
