# src/routes/staff.ts
@@ -4,8 +4,8 @@ import { StaffController } from "../controllers/staff/staff";
 const staff_router = Router();
 const stafff = new StaffController();
 
-staff_router.post("/staff-all-dashboard", stafff.getAllStaffDashboard);
-staff_router.post("/staff-dashboard", stafff.getStaffDashboard);
+staff_router.get("/staff-all-dashboard", stafff.getAllStaffDashboard);
+staff_router.get("/staff-dashboard", stafff.getStaffDashboard);
 staff_router.post(
   "/staff-approve-reject-service-requests",
   stafff.approveRejectServicesSubmission
